syntax = "proto3";

import "google/protobuf/timestamp.proto";
option go_package = "finnbank/services/common/grpc/account";

service AccountService {
  rpc GetAccounts (Empty) returns (AccountsResponse);
  rpc GetAccountById (AccountRequest) returns (AccountResponse);
  rpc GetAccountByEmail (EmailRequest) returns (AccountResponse);
  rpc UpdateAccount (UpdateRequest) returns (AccountResponse);
  rpc UpdateCardStatus(CardUpdateRequest) returns (CardUpdateResponse);
  rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse);
  rpc DeleteAccount (DeleteUserRequest) returns (DeleteUserResponse);
  rpc AddAccount (AddAccountRequest) returns (AddAccountResponse);
  rpc LoginUser(LoginRequest) returns (LoginResponse);
}

message Empty {}
message EmailRequest {
  string email = 1;
}
message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  string access_token = 1;
  string token_type = 2;
  int32 expires_in = 3;
  string refresh_token = 4;
  string auth_id = 5;
  string email = 6;
  Account account = 7;
}
message Account {
  string email = 1;
  string full_name = 2;
  string phone_number = 3;
  string address = 4;
  string account_type = 5;
  string account_number = 6;
  bool has_card = 7;
  double balance = 8;
  google.protobuf.Timestamp date_created = 9;
}
  
message AccountsResponse {
  repeated Account accounts = 1;
}

message AccountRequest {
  string account_number = 1;
}

message AccountResponse {
  Account account = 1;
}

message UpdateRequest {
  string account_number = 1;
  string full_name = 2;
  string phone_number = 3;
  string address = 4;
}
message CardUpdateRequest {
  string account_number = 1;
}
message CardUpdateResponse {
  string status = 1;
}
message UpdatePasswordRequest {
  string auth_id = 1; // Identifier for the account
  string old_password = 2;   
  string new_password = 3;  
}

message UpdatePasswordResponse {
  bool success = 1;          // Indicates if the update was successful
  string message = 2;        // Additional message (e.g., error details)
}

message DeleteUserRequest {
  string account_number = 1;
}

message DeleteUserResponse {
  string message = 1;
}

message AddAccountRequest {
  string email = 1;
  string full_name = 2;
  string phone_number = 3;
  string password = 4;
  string address = 5;
  string account_type = 6;
}

message AddAccountResponse {
  string email = 1;
  string full_name = 2;
  string phone_number = 3;
  string address = 4;
  string account_type = 5;
  string account_number = 6;
}
