syntax = "proto3";

option go_package = "finnbank/commoin/grpc/auth";

service AuthService {
  rpc SignUpUser(SignUpRequest) returns (AuthResponse);
  rpc LoginUser(LoginRequest) returns (AuthResponse);
  rpc GetEncryptedPassword(AuthIDRequest) returns (AuthUserResponse);
  rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string access_token = 1;
  string token_type = 2;
  int32 expires_in = 3;
  string refresh_token = 4;

  UserInfo user = 5;
}

message UserInfo {
  string id = 1;
  string email = 2;
}

message AuthIDRequest {
  string auth_id = 1;
}

message AuthUserResponse {
  string encrypted_password = 1;
}

message UpdatePasswordRequest {
  string auth_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message UpdatePasswordResponse {
  bool success = 1;
  string message = 2;
}
